[package]
name = "hnsw_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
instant-distance = {version = "0.6.0",features = ["with-serde"]}
rand = "0.8.5"
serde = {version = "1.0.160",features = ["derive"]}
serde_json = "1.0.96"
ndarray = "0.15.6"
prettytable-rs = "0.10.0"
faiss = "0.12.0"